feat: Implement order history and review features

--- a/docs/订单与支付系统文档.md
+++ b/docs/订单与支付系统文档.md
@@ -2,14 +2,65 @@
 
 ## 功能概述
 
-订单与支付系统是交易闭环的核心，它管理着从用户下单、支付、到交易完成的整个流程。本系统支持从购物车或商品详情页直接创建订单，并提供了模拟支付、支付密码设置、以及订单历史追溯等功能。
+订单与支付系统是C2C二手商品交易平台的核心组件，管理着从用户下单、支付到交易完成的全流程。本系统基于分布式架构设计，集成了Redis缓存、RabbitMQ消息队列等技术，支持从购物车批量下单或商品详情页直接购买，提供模拟支付、支付密码管理、订单追溯等完整功能。
 
 ### 核心功能
-- **创建订单**：用户可以选择购物车中的商品或直接购买单个商品来创建订单。如果商品来自不同卖家，系统会创建多个子订单。
-- **模拟支付**：用户需要输入预设的支付密码来完成支付。支付成功后，会扣除账户余额并更新订单状态。
-- **支付密码管理**：首次支付的用户需要设置支付密码，之后也可以进行修改。
-- **订单历史**：用户可以查看自己所有的历史订单，包括作为买家和作为卖家的订单，并追踪每个订单的状态（待支付、待发货、待收货、已完成等）。
-- **订单状态流转**：系统支持 `PENDING_PAYMENT` -> `PROCESSING` -> `SHIPPED` -> `DELIVERED` -> `COMPLETED` 的完整订单生命周期管理。
+
+#### 1. 订单创建与管理
+- **多渠道下单**：支持从购物车批量结算或商品详情页直接购买
+- **多卖家订单拆分**：购物车商品来自不同卖家时，系统自动创建多个子订单
+- **库存校验**：下单时实时校验商品库存，防止超卖
+- **订单快照**：记录下单时的商品信息（价格、标题、图片等），避免商品修改影响历史订单
+- **收货地址管理**：支持用户维护多个收货地址，下单时可选择
+
+#### 2. 支付系统
+- **模拟支付流程**：完整模拟真实支付场景，包含支付密码验证、余额扣减、支付结果反馈
+- **支付密码管理**：首次支付需设置6位数字支付密码，支持密码修改和重置
+- **余额系统**：用户账户余额管理，支持充值、消费、退款等操作
+- **支付方式**：支持支付宝、微信支付、银行卡、余额支付等多种方式（模拟）
+- **交易安全**：使用Redis分布式锁防止重复支付，确保交易一致性
+
+#### 3. 订单中心（三个标签页）
+- **我买到的**：
+  - 查看作为买家的所有订单
+  - 支持订单支付、取消订单、确认收货、评价等操作
+  - 显示订单状态、物流信息、支付方式等详细信息
+  - 支持按订单状态筛选（待支付、已支付、已发货、已完成）
+  
+- **我卖出的**：
+  - 查看作为卖家的所有订单
+  - 实时掌握销售情况和订单状态
+  - 支持订单发货、查看买家信息等操作
+  - 统计销售数据和收入信息
+  
+- **砍价活动**：
+  - 管理所有参与的砍价活动
+  - 查看砍价进度和助力记录
+  - 支持砍价成功后直接下单购买
+  - 实时显示砍价状态（进行中、成功、失败、已过期）
+
+#### 4. 订单状态流转
+系统支持完整的订单生命周期管理：
+- **PENDING（待支付）**：订单创建成功，等待买家支付
+- **PAID（已支付）**：买家完成支付，等待卖家发货
+- **SHIPPED（已发货）**：卖家已发货，商品在途
+- **DELIVERED（已送达）**：商品已送达，等待买家确认收货
+- **COMPLETED（已完成）**：买家确认收货，交易完成
+- **CANCELLED（已取消）**：订单已取消（未支付状态可取消）
+- **REFUNDED（已退款）**：订单退款成功
+
+#### 5. 消息通知
+- **订单创建通知**：通过WebSocket实时推送给买卖双方
+- **支付成功通知**：支付完成后立即通知买卖双方
+- **发货提醒**：卖家发货后通知买家
+- **收货提醒**：提醒买家确认收货
+- **评价提醒**：交易完成后提醒买家评价
+
+#### 6. 分布式特性
+- **Redis缓存**：缓存热点订单数据，提升查询性能
+- **分布式锁**：防止并发支付和库存超卖
+- **消息队列**：异步处理订单创建、支付、发货等事件
+- **事务保障**：使用Spring事务确保订单创建和库存扣减的原子性
 
 ## 数据库表结构
 
@@ -62,24 +113,32 @@ CREATE TABLE `order_item` (
 - **Request Body**: `{ "paymentPassword": "123456" }`
 - **Response**: 成功或失败的消息。
 
-#### 3. 获取用户订单历史
-`GET /api/orders/history`
+#### 3. 获取买家订单列表
+`GET /api/orders`
 - **Authorization**: `Bearer {token}`
-- **Query Params**: `as=buyer` 或 `as=seller`
-- **Response**: 返回作为买家或卖家的订单列表。
+- **Response**: 返回当前用户作为买家的所有订单列表。
 
-#### 4. 获取单个订单详情
+#### 4. 获取卖家订单列表
+`GET /api/orders/seller`
+- **Authorization**: `Bearer {token}`
+- **Response**: 返回当前用户作为卖家的所有订单列表（即买家购买了该用户发布的商品）。
+
+#### 5. 获取单个订单详情
 `GET /api/orders/{orderId}`
 - **Authorization**: `Bearer {token}`
 - **Response**: 指定ID的订单完整信息，包括订单项。
 
-#### 5. 更新订单状态（如：发货、确认收货）
-`PUT /api/orders/{orderId}/status`
+#### 6. 确认收货
+`POST /api/orders/{orderId}/confirm`
 - **Authorization**: `Bearer {token}`
-- **Request Body**: `{ "status": "SHIPPED" }`
 - **Response**: 成功或失败的消息。
 
-#### 6. 设置/修改支付密码
+#### 7. 取消订单
+`POST /api/orders/{orderId}/cancel`
+- **Authorization**: `Bearer {token}`
+- **Response**: 成功或失败的消息。
+
+#### 8. 设置/修改支付密码
 `POST /api/users/set-payment-password`
 - **Authorization**: `Bearer {token}`
 - **Request Body**: `{ "password": "new-payment-password" }`
@@ -92,10 +151,13 @@ CREATE TABLE `order_item` (
   - 从路由参数或Vuex中获取要结算的商品信息，展示订单总额和收货地址。
   - 包含一个支付密码输入的模态框。
 
-- **OrderHistory.vue**: 订单历史页面。
+- **OrderHistory.vue**: 订单中心页面。
   - 路由: `/order-history`
-  - 提供“我买到的”和“我卖出的”两个标签页，分别调用API获取不同角色的订单列表。
-  - 根据订单状态显示不同的操作按钮（如“去支付”、“确认收货”、“评价”）。
+  - 提供三个标签页：
+    - **📦 我买到的**：展示作为买家的订单列表，根据订单状态显示不同的操作按钮（去支付、取消订单、确认收货、评价订单）
+    - **💰 我卖出的**：展示作为卖家的订单列表，显示买家信息和订单状态（等待买家付款、等待买家确认收货、交易完成）
+    - **🔪 砍价活动**：展示用户参与的所有砍价活动，包括进度、助力人数、剩余时间等信息
+  - 支持订单过期检测，自动标记超时未支付的订单为"已过期"状态。
 
 - **PaymentPasswordSetup.vue**: 支付密码设置页面。
   - 路由: `/setup-payment-password`
