--- a/docs/评价与信用积分系统文档.md
+++ b/docs/评价与信用积分系统文档.md
@@ -2,15 +2,17 @@
 
 ## 功能概述
 
-本系统实现了类似闲鱼的评价与信用积分系统，包括以下核心功能：
+本系统实现了完整的评价与信用积分系统，包括以下核心功能：
 
 ### 1. 评价系统
 - 买家完成订单后可以对商品和卖家进行评价
-- 支持1-5星评分
-- 支持文字评价和图片上传
-- 支持匿名评价
-- 商品详情页显示所有评价
-- 每个订单只能评价一次
+- 支持1-5星评分（商品评分和卖家评分分开）
+- 支持文字评价和图片上传（支持多张图片）
+- 支持匿名评价选项
+- 商品详情页显示所有评价，支持查看评价图片
+- 每个订单只能评价一次，防止重复评价
+- 评价后自动更新卖家信用积分
+- **修复说明**：已修复创建评价时 `updated_at` 字段为空导致的数据库错误，现在创建评价时会自动设置 `createdAt` 和 `updatedAt` 时间戳
 
 ### 2. 信用积分系统
 - 信用分计算规则：基础分100 + 完成交易数×2 + 平均评分×20 - 差评数×10
