Fix Elasticsearch search issues: date format compatibility and query logic improvements; Update frontend views and backend product services

--- a/docs/推荐系统文档.md
+++ b/docs/推荐系统文档.md
@@ -540,6 +540,40 @@ Response:
 }
 ```
 
+## 搜索与高亮技术
+
+本平台集成了 Elasticsearch 全文搜索引擎，并实现了关键词高亮显示功能，提升用户搜索体验。
+
+### 1. 技术实现
+- **搜索引擎**: Elasticsearch 8.11
+- **集成框架**: Spring Data Elasticsearch
+- **高亮实现**: 使用 Elasticsearch 的 Highlighting 功能，配合自定义标签 `<em class='highlight'>`。
+
+### 2. 后端处理 (`SearchService`)
+在 `searchProducts` 方法中，构建 NativeQuery 时配置高亮参数：
+```java
+HighlightFieldParameters parameters = HighlightFieldParameters.builder()
+    .withPreTags(new String[]{"<em class='highlight'>"})
+    .withPostTags(new String[]{"</em>"})
+    .build();
+
+Highlight highlight = new Highlight(Arrays.asList(
+    new HighlightField("name", parameters),
+    new HighlightField("description", parameters)
+));
+```
+搜索结果返回后，将高亮片段映射到 `ProductDocument` 的 `highlightedName` 和 `highlightedDescription` 字段。
+
+### 3. 前端展示
+前端接收到带有 HTML 标签的高亮文本后，使用 `v-html` 指令进行渲染，并通过 CSS 样式突出显示：
+```css
+:deep(.highlight) {
+  color: #e74c3c;
+  font-weight: bold;
+  background-color: rgba(231, 76, 60, 0.1);
+}
+```
+
 ## 未来扩展方向
 
 1. **跨域推荐**: 结合用户社交关系和社区推荐
